Modified project settings

--- a/project.config
+++ b/project.config
@@ -19,3 +19,5 @@
 	push = +force group user/Andrea SonnY (andreasonny83)
 	pushTag = group user/Andrea SonnY (andreasonny83)
 	pushSignedTag = group user/Andrea SonnY (andreasonny83)
+[project]
+	state = hidden
